# pgshard2

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  buf.gen.yaml  deny.toml  go.work  go.work.sum  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql.yaml  dependabot-automerge.yaml  e2e-kind.yaml  images.yaml  release.yaml
crates/pgshard-agent/: Cargo.toml
crates/pgshard-agent/src/: epoch.rs  instance.rs  lib.rs  main.rs  pg.rs  schema.rs  service.rs  status.rs  workflow.rs
crates/pgshard-agent/tests/: barrier.rs  prepare_source.rs  status.rs  workflow.rs
crates/pgshard-core/: Cargo.toml
crates/pgshard-core/src/: keyspace.rs  lib.rs  lsn.rs  shardfn.rs  vschema.rs
crates/pgshard-core/tests/: prop.rs
crates/pgshard-gate/: Cargo.toml
crates/pgshard-gate/src/: lib.rs
crates/pgshard-gate/tests/: gate.rs
crates/pgshard-plan/: Cargo.toml
crates/pgshard-plan/src/: catalog.rs  extract.rs  lib.rs  sequence.rs
crates/pgshard-proto/: Cargo.toml  build.rs
crates/pgshard-proto/src/: lib.rs
crates/pgshard-repl/: Cargo.toml
crates/pgshard-repl/src/: apply.rs  client.rs  copy.rs  filter.rs  lib.rs  pgoutput.rs  stream.rs
crates/pgshard-repl/tests/: apply.rs  copy.rs  replication.rs
crates/pgshard-router/: Cargo.toml
crates/pgshard-router/src/: backend.rs  lib.rs  main.rs  merge.rs  sequence.rs  wire.rs
crates/pgshard-router/tests/: proxy.rs  sequences.rs  verbatim.rs
crates/pgshard-seq/: Cargo.toml
crates/pgshard-seq/src/: lib.rs
crates/pgshard-sql/: Cargo.toml
crates/pgshard-sql/src/: lib.rs
crates/pgshard-testutil/: Cargo.toml
crates/pgshard-testutil/src/: lib.rs
crates/pgshard-testutil/tests/: pg.rs
crates/pgshard-topo/: Cargo.toml
crates/pgshard-topo/src/: file.rs  lib.rs  model.rs
crates/pgshard-topo/tests/: file_watcher.rs
crates/pgshard-wire/: Cargo.toml
crates/pgshard-wire/src/: backend.rs  frame.rs  lib.rs  proxy.rs  startup.rs
crates/pgshard-wire/tests/: proxy.rs
images/postgres/: Dockerfile
operator/: .custom-gcl.yml  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
operator/api/v1alpha1/: groupversion_info.go  pgshardcluster_types.go  pgshardnode_types.go  pgshardreshard_types.go  pgshardrouting_types.go  pgshardshard_types.go  pgshardtableconfig_types.go  zz_generated.deepcopy.go
operator/cmd/: main.go
operator/config/crd/: kustomization.yaml
operator/config/crd/bases/: pgshard.dev_pgshardclusters.yaml  pgshard.dev_pgshardnodes.yaml  pgshard.dev_pgshardreshards.yaml  pgshard.dev_pgshardroutings.yaml  pgshard.dev_pgshardshards.yaml  pgshard.dev_pgshardtableconfigs.yaml
operator/config/default/: kustomization.yaml  metrics_service.yaml
operator/config/manager/: kustomization.yaml  manager.yaml
operator/config/network-policy/: allow-metrics-traffic.yaml
operator/config/prometheus/: monitor.yaml
operator/config/rbac/: kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  pgshardcluster_admin_role.yaml  pgshardcluster_editor_role.yaml  pgshardcluster_viewer_role.yaml  pgshardrouting_admin_role.yaml  pgshardrouting_editor_role.yaml  pgshardrouting_viewer_role.yaml  pgshardshard_admin_role.yaml  pgshardshard_editor_role.yaml  pgshardshard_viewer_role.yaml  pgshardtableconfig_admin_role.yaml  pgshardtableconfig_editor_role.yaml  pgshardtableconfig_viewer_role.yaml  role.yaml  role_binding.yaml  service_account.yaml
operator/config/samples/: kustomization.yaml  pgshard_v1alpha1_pgshardcluster.yaml  pgshard_v1alpha1_pgshardnode.yaml  pgshard_v1alpha1_pgshardrouting.yaml  pgshard_v1alpha1_pgshardshard.yaml  pgshard_v1alpha1_pgshardtableconfig.yaml
operator/internal/agentclient/: client.go  client_test.go
operator/internal/backupcatalog/: catalog.go  resolver.go  resolver_test.go
operator/internal/controller/: api_validation_test.go  failover.go  failover_test.go  pgshardcluster_controller.go  pgshardcluster_controller_test.go  pgshardcluster_expansion_test.go  pgshardcluster_phase_test.go  pgshardcluster_placement_test.go  pgshardnode_controller.go  pgshardnode_controller_test.go  pgshardnode_failover_test.go  pgshardnode_provenance_test.go  pgshardreshard_controller.go  pgshardreshard_controller_test.go  pgshardreshard_cutover_test.go  pgshardreshard_seeding_test.go  pgshardrouting_controller.go  pgshardrouting_controller_test.go  pgshardshard_controller.go  pgshardshard_controller_test.go  pgshardshard_derive_test.go  pgshardshard_failover_test.go  pgshardshard_logical_test.go  pgshardshard_pods_test.go  pgshardshard_status_test.go  reshard.go  reshard_cutover.go  reshard_finalizing.go  reshard_seeding.go  reshard_targets.go  reshard_test.go  suite_test.go
operator/internal/pb/pgshardv1/: agent.pb.go  agent_grpc.pb.go  common.pb.go  router_admin.pb.go  router_admin_grpc.pb.go  topology.pb.go  vstream.pb.go  vstream_grpc.pb.go  workflow.pb.go
operator/internal/pgconfig/: pgconfig.go  pgconfig_test.go
operator/internal/routing/: compiler.go  compiler_test.go  writer_test.go
operator/internal/topology/: keyrange.go  keyrange_test.go  keyspaceid.go  keyspaceid_test.go
operator/test/e2e/: e2e_suite_test.go  e2e_test.go
operator/test/fakes/: agent.go
proto/pgshard/v1/: agent.proto  common.proto  router_admin.proto  topology.proto  vstream.proto  workflow.proto
test/e2e/manifests/: minio.yaml
