[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/andrew01234567890/pgshard2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[profile.release]
lto = "thin"
