[package]
name = "pgshard-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
pgshard-proto = { version = "0.0.0", path = "../pgshard-proto" }
prost = "0.14.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "process", "time", "sync"] }
tokio-postgres = "0.7"
tokio-stream = "0.1"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true

[dev-dependencies]
pgshard-testutil = { path = "../pgshard-testutil" }
