[package]
name = "pgshard-gate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pgshard-core = { version = "0.0.0", path = "../pgshard-core" }
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1.44"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.4", features = ["test-util"] }
