[package]
name = "pgshard-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
clap = { version = "4.6.2", features = ["derive", "env"] }
futures = "0.3.32"
pgshard-core = { version = "0.0.0", path = "../pgshard-core" }
pgshard-plan = { version = "0.0.0", path = "../pgshard-plan" }
pgshard-sql = { version = "0.0.0", path = "../pgshard-sql" }
pgshard-topo = { version = "0.0.0", path = "../pgshard-topo" }
pgwire = "0.40.4"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tokio-postgres = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints]
workspace = true

[dev-dependencies]
pgshard-testutil = { path = "../pgshard-testutil" }
