[package]
name = "pgshard-seq"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["sync", "rt", "macros"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.4", features = ["rt-multi-thread", "macros", "test-util"] }
