[package]
name = "pgshard-topo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pgshard-core = { version = "0.0.0", path = "../pgshard-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["sync", "time", "rt", "macros", "fs"] }
tracing = "0.1.44"

[lints]
workspace = true
